2003-07-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/trills.ly (endHorizScript): fixes.

	* input/test/chord-names-jazz.ly: merge in alternate Jazz
	notation, move from regression.

	* input/test/script-stack.ly: change name from stacked-scripts

	* input/test/ossia.ly: octave errors.

	* input/no-notation/midi-tuplets.ly: move from input/test/, idem
	for midi-volume-equaliser

m2003-07-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/output-ps.scm (lily-traced-cm-fonts): substitution for lily
	cm fonts.

	* mf/feta-beugel.mf: don't multiply font_count by 10.

	* lily/lookup.cc (horizontal_line): new function. Use
	horizontal-line in output backends.

	* Documentation/user/tutorial.itely (An orchestral part): new
	section on orchestral stuff and identifiers.

2003-07-14  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el: comment-out paren-highlighting, it still causes
	some interference to other modes.

2003-07-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/spacing-spanner.cc (musical_column_spacing): use average,
	not maximum of spacing wishes in polyphonic situations.

	* scm/define-grobs.scm (all-grob-descriptions): bold tuplet
	number

	* lilypond-indent.el: remove paren matching. 

	* lily/text-item.cc (interpret_new_markup): new function
	use iso. text2molecule.

	* lily/main.cc (notice): change FSF address 

	* po/de.po: update PO file to 1.6.

2003-07-13  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/user/ {many}: Add periods and remove spaces.
	
2003-07-11  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-indent.el (LilyPond-paren-set-mode): From XEmacs' paren.el:
	Disable buffer-locally default paren hook and make a new one. 

	* lilypond-mode.el: Turn off locally paren-mode, but turn on
	locally LilyPond-paren-mode. Add todo for mouse double-click.

2003-07-10  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-indent.el (LilyPond-show-paren-mode): From Emacs' paren.el:
	Disable buffer-locally default paren idle timer and make a new one. 
