@@ -1,3 +1,8 @@
+2003-07-16  Heikki Junes  <hjunes@cc.hut.fi>
+
+	* lilypond-font-lock.el: add a comment about LilyPond specific
+	escape characters: ^, - and _, in the syntax table.
+
 2003-07-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* input/test/trills.ly (endHorizScript): fixes.
